# rustlearn

./: README.md
week1/: .rustc_info.json  Cargo.toml  README.md
week1/src/: diamond.rs  hello.rs  rot128.rs
week2/: Cargo.toml  README.md
week2/src/: coins.rs  freq.rs
