[package]
name = "week1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "rot128"
path = "src/rot128.rs"

[[bin]]
name = "hello"
path = "src/hello.rs"

[[bin]]
name = "diamond"
path = "src/diamond.rs"